fixed header button hover on small screens

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -120,8 +120,10 @@
     --background-color: #E6EAFF;
     --icon: url("../img/search.svg");
 
-    &:hover {
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.05) 100%), #E6EAFF;
+    @screen lg {
+        &:hover {
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.05) 100%), #E6EAFF;
+        }
     }
 }
 
@@ -130,7 +132,9 @@
     --background-color: #2BABEE;
     --icon: url("../img/telegram.svg");
 
-    &:hover {
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.05) 100%), #2BABEE;
+    @screen lg {
+        &:hover {
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.05) 100%), #2BABEE;
+        }
     }
 }
